01-applications/traefik/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-test
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nginx.k8s.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: nginx-service
          port: 80
---
# argocd ingressroute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo
  namespace: argo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`k8s.com`) && PathPrefix(`/argo`)
      services:
        - kind: Service
          name: argo-argocd-server
          port: 80
